# embedded-postgres

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
embeddedpostgres/: __init__.py  binary_manager.py  core.py  fixtures.py
tests/: test_binary_manager.py  test_core.py  test_fixtures.py  test_no_postgres.py
