[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-postgres"
version = "0.1.0"
description = "Ephemeral PostgreSQL instances for testing — zero install required"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "embedded-postgres contributors"},
]
keywords = ["postgresql", "testing", "database", "in-memory", "embedded"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Database",
]
dependencies = [
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/piotr-rudnik/embedded-postgres"
Repository = "https://github.com/piotr-rudnik/embedded-postgres"
Issues = "https://github.com/piotr-rudnik/embedded-postgres/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["embeddedpostgres*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
